--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     <script src="app/components/home/service.js"></script>
     <script src="app/components/home/controller.js"></script>
     <script src="app/shared/social/directive.js"></script>
+    <script src="assets/js/assets.js"></script>
   </body>
 </html>
