--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="index, follow">
     <title>Bryce Snyder &#124; Front End Developer - Kitchener, ON</title>
     <link rel="canonical" href="https://bryce-snyder.com">
+    <link href="https://fonts.googleapis.com/css?family=Nunito|Open+Sans:400,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="build/css/application.css">
     <!--[if lt IE 9]>
@@ -17,6 +18,7 @@
   </head>
   <body ng-app="app">
     <div ng-view class="ng-cloak"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-rc.0/angular-route.min.js"></script>
     <script src="app/app.module.js"></script>
